Optimisation de getArmeAleatoire() dans Armes